compiler/tests-spec/testData/diagnostics/linked/expressions/when-expression/exhaustive-when-expressions/p-2/neg/1.1.fir.kt
// SKIP_TXT

// TESTCASE NUMBER: 1
fun case_1(value_1: Int): String = when {
    value_1 == 1 -> ""
    value_1 == 2 -> ""
    value_1 == 3 -> ""
}

// TESTCASE NUMBER: 2
fun case_2(value_1: Int): String = when {
    value_1 == 1 -> ""
}

// TESTCASE NUMBER: 3
fun case_3(): Int = when {}
